--- a/src/public/lang/ua.json
+++ b/src/public/lang/ua.json
@@ -8,6 +8,21 @@
   "hero.title.after": "Республіці",
   "hero.button": "Залишити заявку",
 
+  "reviews.title.before": "Коротка",
+  "reviews.title.highlight": "інформація",
+  "reviews.title.after": "",
+
+  "reviews.subtitle": "Ми надаємо чітку та структуровану підтримку на кожному етапі нашої співпраці.",
+
+  "reviews.item1.title": "ПИТАННЯ",
+  "reviews.item1.text": "Не соромтеся ставити будь-які запитання — ми готові детально пояснити всі нюанси.",
+
+  "reviews.item2.title": "ДОГОВІР ПРО ОБСЛУГОВУВАННЯ",
+  "reviews.item2.text": "Ми готуємо індивідуальний договір для кожного клієнта.",
+
+  "reviews.item3.title": "ЯК З НАМИ ЗВ’ЯЗАТИСЯ",
+  "reviews.item3.text": "Зателефонуйте нам або надішліть запит через контактну форму.",
+
   "form.title": "Залишити заявку",
   "form.subtitle": "Будь ласка, заповніть форму нижче, і ми зв’яжемося з вами найближчим часом.",
   "form.name": "Ім’я",
