--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -65,5 +65,30 @@
 
   "form_submit": "Надіслати",
 
-  "form_privacy_text": "Натискаючи кнопку «Надіслати», ви погоджуєтеся з нашою Політикою конфіденційності та дозволяєте використання даних у маркетингових цілях."
+  "form_privacy_text": "Натискаючи кнопку «Надіслати», ви погоджуєтеся з нашою Політикою конфіденційності та дозволяєте використання даних у маркетингових цілях.",
+
+  "reviews_title": "Огляд <span> ключових </span> питань",
+
+  "reviews_subtitle": "Ми надаємо чітку та структуровану підтримку на кожному етапі співпраці. Нижче ви знайдете основну інформацію про те, як ми комунікуємо, оформлюємо угоди та підтримуємо зв’язок протягом усього процесу надання послуг.",
+
+  "reviews_questions_title": "ЗАПИТАННЯ",
+  "reviews_questions_text": "Ви можете ставити будь-які запитання — ми готові детально пояснити всі нюанси, обговорити процес співпраці та надати зрозумілу й вичерпну інформацію.",
+
+  "reviews_agreement_title": "ДОГОВІР",
+  "reviews_agreement_text": "Ми готуємо індивідуальний договір для кожного клієнта. Вартість послуг розраховується індивідуально та залежить від обсягу, складності й специфіки вашого бізнесу.",
+
+  "reviews_contact_title": "ЯК З НАМИ ЗВ’ЯЗАТИСЯ",
+  "reviews_contact_text": "Зв’яжіться з нами телефоном або надішліть запит через контактну форму. Будь ласка, зазначте мету звернення та ключову інформацію про вашу компанію.",
+
+  "footer_phone_label": "Номер телефону:",
+  "footer_address_label": "Адреса:",
+
+  "footer_nav_services": "Послуги",
+  "footer_nav_reviews": "Відгуки",
+  "footer_nav_contact": "Зв’язатися з нами",
+
+  "footer_copyright": "GreenFrogOffice.<br>Усі права захищені.",
+
+  "footer_privacy": "Політика конфіденційності",
+  "footer_terms": "Умови використання"
 }
