--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -65,5 +65,30 @@
 
   "form_submit": "Отправить",
 
-  "form_privacy_text": "Нажимая кнопку «Отправить», вы соглашаетесь с нашей Политикой конфиденциальности и даёте согласие на использование данных в маркетинговых целях."
+  "form_privacy_text": "Нажимая кнопку «Отправить», вы соглашаетесь с нашей Политикой конфиденциальности и даёте согласие на использование данных в маркетинговых целях.",
+
+  "reviews_title": "Обзор <span> ключевых </span> вопросов",
+
+  "reviews_subtitle": "Мы обеспечиваем чёткое и структурированное сопровождение на каждом этапе сотрудничества. Ниже представлена основная информация о том, как мы взаимодействуем, оформляем договоры и поддерживаем связь в процессе оказания услуг.",
+
+  "reviews_questions_title": "ВОПРОСЫ",
+  "reviews_questions_text": "Вы можете задать любые вопросы — мы подробно разъясним все нюансы, обсудим процесс сотрудничества и предоставим полную и понятную информацию.",
+
+  "reviews_agreement_title": "ДОГОВОР",
+  "reviews_agreement_text": "Мы подготавливаем индивидуальный договор для каждого клиента. Стоимость услуг рассчитывается индивидуально и зависит от объёма, сложности и специфики вашего бизнеса.",
+
+  "reviews_contact_title": "КАК СВЯЗАТЬСЯ С НАМИ",
+  "reviews_contact_text": "Свяжитесь с нами по телефону или отправьте запрос через форму обратной связи. Пожалуйста, укажите цель обращения и ключевую информацию о вашей компании.",
+
+  "footer_phone_label": "Номер телефона:",
+  "footer_address_label": "Адрес:",
+
+  "footer_nav_services": "Услуги",
+  "footer_nav_reviews": "Отзывы",
+  "footer_nav_contact": "Связаться с нами",
+
+  "footer_copyright": "GreenFrogOffice.<br>Все права защищены.",
+
+  "footer_privacy": "Политика конфиденциальности",
+  "footer_terms": "Условия использования"
 }
