--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -65,7 +65,7 @@
 
   "form_submit": "Отправить",
 
-  "form_privacy_text": "Нажимая кнопку «Отправить», вы соглашаетесь с нашей Политикой конфиденциальности и даёте согласие на использование данных в маркетинговых целях.",
+  "form_privacy_text": "Нажимая кнопку «Отправить», вы соглашаетесь с нашей <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Политикой конфиденциальности</a> и разрешаете использовать эту информацию в маркетинговых целях.",
 
   "reviews_title": "Обзор <span> ключевых </span> вопросов",
 
