--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -65,7 +65,7 @@
 
   "form_submit": "Надіслати",
 
-  "form_privacy_text": "Натискаючи кнопку «Надіслати», ви погоджуєтеся з нашою Політикою конфіденційності та дозволяєте використання даних у маркетингових цілях.",
+  "form_privacy_text": "Натискаючи кнопку «Надіслати», ви погоджуєтесь з нашою <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Політикою конфіденційності</a> та дозволяєте використовувати цю інформацію в маркетингових цілях.",
 
   "reviews_title": "Огляд <span> ключових </span> питань",
 
