--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,8 +87,5 @@
   "footer_nav_reviews": "Reviews",
   "footer_nav_contact": "Contact us",
 
-  "footer_copyright": "GreenFrogOffice.<br>All rights reserved.",
-
-  "footer_privacy": "Privacy Policy",
-  "footer_terms": "Terms of Service"
+  "footer_copyright": "GreenFrogOffice.<br>All rights reserved."
 }
