--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -87,8 +87,5 @@
   "footer_nav_reviews": "Відгуки",
   "footer_nav_contact": "Зв’язатися з нами",
 
-  "footer_copyright": "GreenFrogOffice.<br>Усі права захищені.",
-
-  "footer_privacy": "Політика конфіденційності",
-  "footer_terms": "Умови використання"
+  "footer_copyright": "GreenFrogOffice.<br>Усі права захищені."
 }
