--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -87,8 +87,5 @@
   "footer_nav_reviews": "Отзывы",
   "footer_nav_contact": "Связаться с нами",
 
-  "footer_copyright": "GreenFrogOffice.<br>Все права защищены.",
-
-  "footer_privacy": "Политика конфиденциальности",
-  "footer_terms": "Условия использования"
+  "footer_copyright": "GreenFrogOffice.<br>Все права защищены."
 }
