--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -86,6 +86,6 @@
   "footer_nav_services": "Послуги",
   "footer_nav_reviews": "Відгуки",
   "footer_nav_contact": "Зв’язатися з нами",
-
-  "footer_copyright": "GreenFrogOffice.<br>Усі права захищені."
+  "footer_copyright": "GreenFrogOffice.<br>Усі права захищені.",
+  "footer_email_label": "Електронна пошта:"
 }
