--- a/src/public/locales/ru.json
+++ b/src/public/locales/ru.json
@@ -3,7 +3,7 @@
   "nav_reviews": "Отзывы",
   "nav_contact": "Связаться с нами",
 
-  "hero_title": "Услуги в Чешской Республике!",
+  "hero_title": "Услуги в <span class='hero-english'>Чешской</span> Республике!",
   "hero_button": "Оставить заявку",
   "services_title": "Услуги",
 
