--- a/src/public/locales/uk.json
+++ b/src/public/locales/uk.json
@@ -3,7 +3,7 @@
   "nav_reviews": "Відгуки",
   "nav_contact": "Зв’язатися з нами",
 
-  "hero_title": "Послуги в Чеській Республіці!",
+  "hero_title": "Послуги в <span class='hero-english'>Чеській</span> Республіці!",
   "hero_button": "Залишити заявку",
   "services_title": "Послуги",
 
