--- a/src/public/locales/en.json
+++ b/src/public/locales/en.json
@@ -37,6 +37,7 @@
 
   "form_title": "Leave an application",
   "form_description": "Please use the form below to contact us. Enter your name, email, and message and we will get back to you shortly.",
+  "form_success": "Thank you! Your message has been sent.",
 
   "proposal_hidden_title": "Proposal to leave an application",
 
