--- a/src/public/locales/ru.json
+++ b/src/public/locales/ru.json
@@ -64,6 +64,7 @@
   "form_comment_placeholder": "Комментарий",
 
   "form_submit": "Отправить",
+  "form_success": "Спасибо! Ваше сообщение отправлено.",
 
   "form_privacy_text": "Нажимая кнопку «Отправить», вы соглашаетесь с нашей <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Политикой конфиденциальности</a> и разрешаете использовать эту информацию в маркетинговых целях.",
 
