--- a/src/public/locales/ru.json
+++ b/src/public/locales/ru.json
@@ -11,28 +11,16 @@
   "about_subtitle": "Регистрация компаний, бухгалтерия, сертифицированные переводы, открытие банковских счетов, лицензирование, юридическая поддержка и полное административное сопровождение — быстро, надёжно и с учётом ваших потребностей",
 
   "service_formation_title": "Регистрация компании",
-  "service_formation_text": "Регистрация компании (s.r.o.) — комплексный пакет услуг. Мы подготавливаем все необходимые документы, сопровождаем вас на каждом этапе и берём на себя все юридические процедуры. Быстро, прозрачно и без ошибок.",
+  "service_formation_text": "Мы регистрируем фирмы в Чехии удаленно под ключ. Подготавливаем все необходимые документы для открытия фирмы, процесс регистрации проходит быстро и прозрачно.",
 
-  "service_documents_title": "Подготовка документов",
-  "service_documents_text": "Полная подготовка документов для регистрации компании. Мы собираем необходимые документы, подготавливаем заявления, обеспечиваем соответствие требованиям законодательства и подачу в официальные органы.",
+  "service_documents_title": "Бухгалтерские услуги",
+  "service_documents_text": "Полное бухгалтерское сопровождение для малого и среднего бизнеса. Ведём учёт, подготавливаем отчётность, работаем с DPH, контролируем срок подачи деклараций.",
 
-  "service_licenses_title": "Лицензии и разрешения",
-  "service_licenses_text": "Получение лицензий и разрешений на ведение бизнеса. Мы оформляем торговые лицензии, специальные разрешения и весь пакет документов для законной деятельности в Чешской Республике.",
+  "service_licenses_title": "Переводы и апостилирование",
+  "service_licenses_text": "Осуществляем переводы заверенные судебным переводчиком, а также апостилирование документов.",
 
-  "service_representation_title": "Представительство в государственных органах",
-  "service_representation_text": "Представительство в государственных учреждениях. Мы сопровождаем процедуры в торговых, финансовых, миграционных и социальных органах. Ваше личное присутствие не требуется.",
-
-  "service_translations_title": "Сертифицированные переводы",
-  "service_translations_text": "Сертифицированные и судебные переводы. Официальные переводы для государственных органов, банков, судов и нотариусов, выполненные присяжными переводчиками.",
-
-  "service_bank_title": "Открытие банковских счетов",
-  "service_bank_text": "Открытие личных и корпоративных банковских счетов. Мы подготавливаем документы, сопровождаем визит в банк и помогаем выбрать оптимальные банковские условия.",
-
-  "service_realestate_title": "Юридическое сопровождение недвижимости",
-  "service_realestate_text": "Юридическое сопровождение сделок с недвижимостью. Мы проверяем объекты, подготавливаем договоры, сопровождаем переговоры и обеспечиваем юридическую безопасность сделки.",
-
-  "service_accounting_title": "Бухгалтерские услуги",
-  "service_accounting_text": "Полное бухгалтерское сопровождение. Ведение бухгалтерии, подготовка отчётности, работа с НДС, контроль сроков и оптимизация налоговой нагрузки.",
+  "service_representation_title": "Нострификация дипломов",
+  "service_representation_text": "Прохождение процедуры признания вашего зарубежного высшего образования эквивалентным чешскому.",
 
   "proposal_hidden_title": "Предложение оставить заявку",
 
