--- a/src/public/locales/uk.json
+++ b/src/public/locales/uk.json
@@ -12,28 +12,16 @@
   "about_subtitle": "Реєстрація компаній, бухгалтерія, сертифіковані переклади, відкриття банківських рахунків, ліцензування, юридична підтримка та повний адміністративний супровід",
 
   "service_formation_title": "Реєстрація компанії",
-  "service_formation_text": "Реєстрація компанії (s.r.o.) — повний пакет послуг. Ми готуємо всі необхідні документи, супроводжуємо на кожному етапі та беремо на себе всі юридичні процедури.",
+  "service_formation_text": "Ми реєструємо компанії в Чехії дистанційно «під ключ». Готуємо всі необхідні документи для відкриття компанії, процес реєстрації проходить швидко та прозоро.",
 
-  "service_documents_title": "Підготовка документів",
-  "service_documents_text": "Повна підготовка документів для реєстрації компанії. Ми збираємо необхідні документи, готуємо заяви та забезпечуємо відповідність законодавчим вимогам.",
+  "service_documents_title": "Бухгалтерські послуги",
+  "service_documents_text": "Повний бухгалтерський супровід для малого та середнього бізнесу. Ведемо облік, готуємо звітність, працюємо з DPH, контролюємо строки подання декларацій.",
 
-  "service_licenses_title": "Ліцензії та дозволи",
-  "service_licenses_text": "Отримання ліцензій і дозволів для ведення бізнесу. Ми оформлюємо торгові ліцензії, спеціальні дозволи та повний пакет документів для законної діяльності в Чеській Республіці.",
+  "service_licenses_title": "Переклади та апостилювання",
+  "service_licenses_text": "Здійснюємо переклади, засвідчені судовим перекладачем, а також апостилювання документів.",
 
-  "service_representation_title": "Представництво в державних установах",
-  "service_representation_text": "Представництво в державних органах. Ми супроводжуємо процедури в торгових, фінансових, міграційних та соціальних установах без необхідності вашої особистої присутності.",
-
-  "service_translations_title": "Сертифіковані переклади",
-  "service_translations_text": "Сертифіковані та судові переклади для державних органів, банків, судів і нотаріусів, виконані присяжними перекладачами.",
-
-  "service_bank_title": "Відкриття банківських рахунків",
-  "service_bank_text": "Відкриття особистих та корпоративних банківських рахунків. Ми готуємо документи, супроводжуємо візит до банку та допомагаємо обрати оптимальні умови.",
-
-  "service_realestate_title": "Юридичний супровід нерухомості",
-  "service_realestate_text": "Юридичний супровід угод з нерухомістю. Ми перевіряємо об’єкти, готуємо договори, координуємо переговори та забезпечуємо юридичну безпеку угоди.",
-
-  "service_accounting_title": "Бухгалтерські послуги",
-  "service_accounting_text": "Повний бухгалтерський супровід бізнесу та фрилансерів. Ведення обліку, підготовка фінансової звітності, робота з ПДВ та оптимізація податкового навантаження.",
+  "service_representation_title": "Нострифікація дипломів",
+  "service_representation_text": "Проходження процедури визнання вашої іноземної вищої освіти еквівалентною чеській.",
 
   "proposal_hidden_title": "Пропозиція залишити заявку",
 
