--- a/src/public/locales/en.json
+++ b/src/public/locales/en.json
@@ -11,29 +11,17 @@
   "about_title": "Services",
   "about_subtitle": "Company formation, accounting, certified translations, bank account opening, licensing, legal support, and full administrative assistance — fast, reliable, and fully tailored to your needs",
 
-  "service_formation_title": "Company Formation",
-  "service_formation_text": "Company Formation (s.r.o.) — Complete Service Package. We prepare all documents required for establishing a company, guide you through every step, and handle all legal procedures. Fast, transparent and error-free incorporation.",
+  "service_formation_title": "Company Registration",
+  "service_formation_text": "We provide turnkey remote company registration in the Czech Republic. We prepare all the necessary documents to open a company; the registration process is fast and transparent.",
 
-  "service_documents_title": "Document Preparation",
-  "service_documents_text": "Complete document preparation for company registration. We collect all necessary documentation, prepare applications, ensure compliance with legal requirements, and manage submissions to the official registry.",
+  "service_documents_title": "Accounting Services",
+  "service_documents_text": "Comprehensive accounting support for small and medium-sized businesses. We handle bookkeeping, prepare reports, work with VAT (DPH), and monitor tax filing deadlines.",
 
-  "service_licenses_title": "Business Licenses and Permits",
-  "service_licenses_text": "Obtaining business licenses and permits. We arrange trade licenses, special permits, and all documentation required for compliant business activity in the Czech Republic. Fast and professional assistance.",
+  "service_licenses_title": "Translations and Apostille",
+  "service_licenses_text": "We provide certified translations by sworn court translators, as well as apostille services for documents.",
 
-  "service_representation_title": "Representation in Government Offices",
-  "service_representation_text": "Representation in public institutions. We handle administrative procedures at trade offices, financial authorities, immigration offices, social offices, and other institutions. No need for you to attend in person.",
-
-  "service_translations_title": "Certified Translations",
-  "service_translations_text": "Certified and court-approved translations. Official translations for government offices, banks, courts, and notaries. All documents are translated and certified by authorized sworn translators.",
-
-  "service_bank_title": "Bank Account Opening",
-  "service_bank_text": "Opening personal and corporate bank accounts. We prepare the required documents, assist during the bank visit, and help you choose the most suitable banking conditions. Cooperation with major Czech banks.",
-
-  "service_realestate_title": "Legal Support for Real Estate",
-  "service_realestate_text": "Legal support for real estate transactions. We review properties, prepare agreements, coordinate negotiations, and ensure safe and legally sound property acquisition. Full assistance throughout the transaction.",
-
-  "service_accounting_title": "Accounting Services",
-  "service_accounting_text": "Full accounting support. We provide bookkeeping, prepare financial statements, handle VAT submissions, control deadlines, and help optimize your tax obligations. Reliable and confidential accounting for businesses and freelancers.",
+  "service_representation_title": "Diploma Nostrification",
+  "service_representation_text": "Completion of the procedure for recognizing your foreign higher education as equivalent to Czech education.",
 
   "form_title": "Leave an application",
   "form_description": "Please use the form below to contact us. Enter your name, email, and message and we will get back to you shortly.",
