--- a/src/public/locales/en.json
+++ b/src/public/locales/en.json
@@ -57,7 +57,7 @@
 
   "form_privacy_text": "By clicking on \"Send\" button, you agree to our <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Privacy Policy</a> and allow us to use this information for marketing purposes.",
 
-  "reviews_title": "Overview <span> of </span> Topics",
+  "reviews_title": "<span> Overview  of  Topics </span>",
 
   "reviews_subtitle": "We provide clear and structured support at every stage of our cooperation. Below you will find essential information about how we communicate, formalize agreements, and stay connected throughout the entire service process.",
 
