--- a/src/public/locales/ru.json
+++ b/src/public/locales/ru.json
@@ -56,7 +56,7 @@
 
   "form_privacy_text": "Нажимая кнопку «Отправить», вы соглашаетесь с нашей <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Политикой конфиденциальности</a> и разрешаете использовать эту информацию в маркетинговых целях.",
 
-  "reviews_title": "Обзор <span> ключевых </span> вопросов",
+  "reviews_title": "<span> Обзор ключевых вопросов </span>",
 
   "reviews_subtitle": "Мы обеспечиваем чёткое и структурированное сопровождение на каждом этапе сотрудничества. Ниже представлена основная информация о том, как мы взаимодействуем, оформляем договоры и поддерживаем связь в процессе оказания услуг.",
 
