--- a/src/public/locales/uk.json
+++ b/src/public/locales/uk.json
@@ -57,7 +57,7 @@
 
   "form_privacy_text": "Натискаючи кнопку «Надіслати», ви погоджуєтесь з нашою <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Політикою конфіденційності</a> та дозволяєте використовувати цю інформацію в маркетингових цілях.",
 
-  "reviews_title": "Огляд <span> ключових </span> питань",
+  "reviews_title": "<span> Огляд ключових питань </span>",
 
   "reviews_subtitle": "Ми надаємо чітку та структуровану підтримку на кожному етапі співпраці. Нижче ви знайдете основну інформацію про те, як ми комунікуємо, оформлюємо угоди та підтримуємо зв’язок протягом усього процесу надання послуг.",
 
