--- a/src/public/locales/ru.json
+++ b/src/public/locales/ru.json
@@ -6,6 +6,13 @@
   "hero.before": "Услуги в",
   "hero.highlight": "Чешской",
   "hero.after": "Республике!",
+  "hero_button": "Оставить заявку",
+
+  "seo": {
+    "title": "<Бизнес услуги в Чешской Республике",
+    "description": "Регистрация компаний, бухгалтерия, сертифицированные переводы, открытие банковских счетов, лицензирование, юридическая поддержка и полное административное сопровождение в Чешской Республике.",
+    "keywords": "бизнес услуги Чешская Республика, регистрация компаний Чешская Республика, бухгалтерские услуги Чешская Республика, сертифицированные переводы Чешская Республика, юридическая поддержка Чешская Республика"
+  },
 
   "about_title": "Услуги",
   "about_subtitle": "Регистрация компаний, бухгалтерия, сертифицированные переводы, открытие банковских счетов, лицензирование, юридическая поддержка и полное административное сопровождение — быстро, надёжно и с учётом ваших потребностей",
@@ -56,15 +63,15 @@
 
   "form_privacy_text": "Нажимая кнопку «Отправить», вы соглашаетесь с нашей <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Политикой конфиденциальности</a> и разрешаете использовать эту информацию в маркетинговых целях.",
 
-  "reviews_title": "<span> Обзор ключевых вопросов </span>",
+  "reviews_title": "<span> Ключевые вопросы </span>",
 
   "reviews_subtitle": "Мы обеспечиваем чёткое и структурированное сопровождение на каждом этапе сотрудничества. Ниже представлена основная информация о том, как мы взаимодействуем, оформляем договоры и поддерживаем связь в процессе оказания услуг.",
 
   "reviews_questions_title": "ВОПРОСЫ",
   "reviews_questions_text": "Вы можете задать любые вопросы — мы подробно разъясним все нюансы, обсудим процесс сотрудничества и предоставим полную и понятную информацию.",
 
-  "reviews_agreement_title": "ДОГОВОР",
-  "reviews_agreement_text": "Мы подготавливаем индивидуальный договор для каждого клиента. Стоимость услуг рассчитывается индивидуально и зависит от объёма, сложности и специфики вашего бизнеса.",
+  "reviews_agreement_title": "ПОЧЕМУ ВЫБИРАЮТ НАС? ",
+  "reviews_agreement_text": "Мы упрощаем процесс регистрации и ведения бизнеса в Чехии, делая его понятным и комфортным. Предоставляем услуги высокого качества и уделяем внимание каждому клиенту.",
 
   "reviews_contact_title": "КАК СВЯЗАТЬСЯ С НАМИ",
   "reviews_contact_text": "Свяжитесь с нами по телефону или отправьте запрос через форму обратной связи. Пожалуйста, укажите цель обращения и ключевую информацию о вашей компании.",
