--- a/src/public/locales/uk.json
+++ b/src/public/locales/uk.json
@@ -8,6 +8,12 @@
   "hero.after": "Республіці!",
   "hero_button": "Залишити заявку",
 
+  "seo": {
+    "title": "Послуги в Чеській Республіці",
+    "description": "Реєстрація компаній, бухгалтерські послуги, сертифіковані переклади, відкриття банківських рахунків, ліцензування та юридична підтримка в Чеській Республіці",
+    "keywords": "послуги в Чеській Республіці, реєстрація компаній Чеська Республіка, бухгалтерські послуги Чеська Республіка, сертифіковані переклади Чеська Республіка"
+  },
+
   "about_title": "Послуги",
   "about_subtitle": "Реєстрація компаній, бухгалтерія, сертифіковані переклади, відкриття банківських рахунків, ліцензування, юридична підтримка та повний адміністративний супровід",
 
@@ -57,15 +63,15 @@
 
   "form_privacy_text": "Натискаючи кнопку «Надіслати», ви погоджуєтесь з нашою <a class=\"text-link leave-item-link-text-down\" href=\"/privacy-policy\" target=\"_blank\">Політикою конфіденційності</a> та дозволяєте використовувати цю інформацію в маркетингових цілях.",
 
-  "reviews_title": "<span> Огляд ключових питань </span>",
+  "reviews_title": "<span> Ключові питання </span>",
 
   "reviews_subtitle": "Ми надаємо чітку та структуровану підтримку на кожному етапі співпраці. Нижче ви знайдете основну інформацію про те, як ми комунікуємо, оформлюємо угоди та підтримуємо зв’язок протягом усього процесу надання послуг.",
 
   "reviews_questions_title": "ЗАПИТАННЯ",
   "reviews_questions_text": "Ви можете ставити будь-які запитання — ми готові детально пояснити всі нюанси, обговорити процес співпраці та надати зрозумілу й вичерпну інформацію.",
 
-  "reviews_agreement_title": "ДОГОВІР",
-  "reviews_agreement_text": "Ми готуємо індивідуальний договір для кожного клієнта. Вартість послуг розраховується індивідуально та залежить від обсягу, складності й специфіки вашого бізнесу.",
+  "reviews_agreement_title": "Чому обирають нас?",
+  "reviews_agreement_text": "Ми спрощуємо процес реєстрації та ведення бізнесу в Чехії, роблячи його зрозумілим і комфортним. Ми надаємо послуги високої якості та приділяємо увагу кожному клієнту.",
 
   "reviews_contact_title": "ЯК З НАМИ ЗВ’ЯЗАТИСЯ",
   "reviews_contact_text": "Зв’яжіться з нами телефоном або надішліть запит через контактну форму. Будь ласка, зазначте мету звернення та ключову інформацію про вашу компанію.",
